--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Assign</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
     <link rel="stylesheet" href="main.css" />
+    <link rel="icon" href="favicon.ico">
     <script src="PrintTime.js"></script>
     <script src="PrintWeather.js"></script>
     <script src="PrintNews.js"></script>
