--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Assign</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" href="favicon.ico">
     <script src="PrintTime.js"></script>
