--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html>
 
 <head>
-    <title>Assign</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <title>Assign</title> 
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" href="favicon.ico">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="PrintTime.js"></script>
     <script src="PrintWeather.js"></script>
     <script src="PrintNews.js"></script>
