--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
             <input type="button" id="bar" value="update" onclick="update(true)"/>
         </div>
         <p id="myart"></p>
-        
+        <div id="mysearch">
+            <a href="https://www.facebook.com/" target="_blank"><img src="img/face.png"/></a>
+            <a href="https://twitter.com/" target="_blank"><img src="img/twit.png"/></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="img/ig.png"/></a>
+        </div>
     </div>
 
 
